--- a/templates/faq-en.html
+++ b/templates/faq-en.html
@@ -65,8 +65,8 @@
             $if(faq.questions.de)$
               <a class="lang-button" href="../de/#$faq.questions.de.id$">de</a>
             $endif$
-            <h2 property="name" content="$faq.questions.en.q$"><a href="#$faq.questions.en.id$">$faq.questions.en.q$</a></h2>
-            <div property="acceptedAnswer" typeof="Answer">
+            <h2 property="name"><a href="#$faq.questions.en.id$">$faq.questions.en.q$</a></h2>
+            <div property="acceptedAnswer" typeof="Answer" class="answer">
               <div property="text">
                 $faq.questions.en.a$
               </div>
@@ -83,8 +83,8 @@
                 $if(faq.sections.questions.de)$
                   <a class="lang-button" href="../de/#$faq.sections.questions.de.id$">de</a>
                 $endif$
-                <h3 property="name" content="$faq.sections.questions.en.q$"><a href="#$faq.questions.sections.en.id$">$faq.sections.questions.en.q$</a></h3>
-                <div property="acceptedAnswer" typeof="Answer">
+                <h3 property="name"><a href="#$faq.questions.sections.en.id$">$faq.sections.questions.en.q$</a></h3>
+                <div property="acceptedAnswer" typeof="Answer" class="answer">
                   <div property="text">
                     $faq.sections.questions.en.a$
                   </div>
@@ -101,8 +101,8 @@
                     $if(faq.sections.subsections.questions.de)$
                       <a class="lang-button" href="../de/#$faq.sections.subsections.questions.de.id$">de</a>
                     $endif$
-                    <h4 property="name" content="$faq.sections.subsections.questions.en.q$"><a href="#$faq.sections.subsections.questions.en.id$">$faq.sections.subsections.questions.en.q$</a></h4>
-                    <div property="acceptedAnswer" typeof="Answer">
+                    <h4 property="name"><a href="#$faq.sections.subsections.questions.en.id$">$faq.sections.subsections.questions.en.q$</a></h4>
+                    <div property="acceptedAnswer" typeof="Answer" class="answer">
                       <div property="text">
                         $faq.sections.subsections.questions.en.a$
                       </div>
