--- a/static/style.css
+++ b/static/style.css
@@ -412,6 +412,15 @@ footer a:focus {
     content: '#';
   }
 
+  .faq article .answer h3,
+  .faq article .answer h4,
+  .faq article .answer h5 {
+    font-weight: 700;
+    font-size: 18px;
+    margin: 16px 0;
+    margin-top: 24px;
+  }
+
   .faq article :last-child {
     margin-bottom: 0;
   }
@@ -579,6 +588,15 @@ footer a:focus {
     position: absolute;
     left: -1ch;
     content: '#';
+  }
+
+  .faq article .answer h3,
+  .faq article .answer h4,
+  .faq article .answer h5 {
+    font-weight: 700;
+    font-size: 18px;
+    margin: 16px 0;
+    margin-top: 24px;
   }
 
   .faq article :last-child {
