add dark colors v3

--- a/static/style.css
+++ b/static/style.css
@@ -128,7 +128,8 @@
     --color-token-accent-alternate: #f09500;
     --color-token-background: #1c1d23;
     --color-token-background-accent: #434a56;
-    --color-token-background-accent-light: #46545f;
+    --color-token-background-accent-light: #343942;
+  }
 }
 
 /********************
