--- a/static/style.css
+++ b/static/style.css
@@ -378,6 +378,7 @@ footer a:focus {
     position: absolute;
     top: 41px;
     right: 104px; /* 15 + 48 + 41 */
+    padding: 0;
   }
 
   header a.lang-button {
@@ -575,6 +576,7 @@ footer a:focus {
     position: absolute;
     top: 25px;
     right: 65px; /* 10 + 30 + 25 */
+    padding: 0;
   }
 
   header a.lang-button {
