--- a/templates/faq-en.html
+++ b/templates/faq-en.html
@@ -13,14 +13,14 @@
       }
     </script>
     <link rel="stylesheet" href="../../style.css" />
-    <link rel="icon" href="../../favicon.ico" sizes="32x32">
-    <link rel="icon" href="../../icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="../../apple-touch-icon.png">
-    <script src="../../script.js" defer></script>
+    <link rel="icon" href="../../favicon.ico" sizes="32x32" />
+    <link rel="icon" href="../../icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="../../apple-touch-icon.png" />
+    <script src="../../script.js" defer=""></script>
   </head>
   <body vocab="http://schema.org/" typeof="FAQPage">
     <header>
-      <a href="$faq.logo.href$" class="logo-link"><img src="../../$faq.logo.src$"></a>
+      <a href="$faq.logo.href$" class="logo-link"><img src="../../$faq.logo.src$" /></a>
       $if(faq.de)$
         <a href="../de/" class="lang-button">de</a>
       $endif$
