add social previews

--- a/templates/faq-de.html
+++ b/templates/faq-de.html
@@ -17,6 +17,27 @@
     <link rel="icon" href="../../icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="../../apple-touch-icon.png" />
     <script src="../../script.js" defer=""></script>
+    
+    <!-- Meta Information -->
+    <meta property="og:title" content="ÖH JKU – FAQ: Informatik & AI">
+    <meta name="twitter:title" content="ÖH JKU – FAQ: Informatik & AI">
+    
+      
+    <meta name="description" content="Als Studienvertretungen für Informatik und AI erhalten wir oft Fragen zu unseren Studien. Dieses FAQ soll dabei helfen, die meisten davon zu beantworten.">
+    <meta property="og:description" content="Als Studienvertretungen für Informatik und AI erhalten wir oft Fragen zu unseren Studien. Dieses FAQ soll dabei helfen, die meisten davon zu beantworten.">
+    <meta name="twitter:description" content="Als Studienvertretungen für Informatik und AI erhalten wir oft Fragen zu unseren Studien. Dieses FAQ soll dabei helfen, die meisten davon zu beantworten.">
+    
+    <meta property="og:image" content="/images/faqs_en.webp">
+    <meta property="og:image:url" content="/images/faqs_eb.webp">
+    <meta name="twitter:image" content="/images/faqs_en.webp">
+    
+    <meta property="og:image:alt" content="Weißer Text auf blauem Hintergrund: FAQ: Informatik & AI">
+    <meta name="twitter:image:alt" content="Weißer Text auf blauem Hintergrund: FAQ: Informatik & AI">
+    
+    <meta property="og:image:width" content="1771">
+    <meta property="og:image:height" content="925">
+    
+    <meta name="twitter:card" content="summary_large_image">
   </head>
   <body vocab="http://schema.org/" typeof="FAQPage">
     <header>
