--- a/templates/faq-en.html
+++ b/templates/faq-en.html
@@ -17,6 +17,27 @@
     <link rel="icon" href="../../icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="../../apple-touch-icon.png" />
     <script src="../../script.js" defer=""></script>
+    
+    <!-- Meta Information -->
+    <meta property="og:title" content="ÖH JKU—FAQ: CS & AI">
+    <meta name="twitter:title" content="ÖH JKU—FAQ: CS & AI">
+    
+      
+    <meta name="description" content="As student representatives for Computer Science and AI, we frequently receive questions about our studies. This FAQ should help answer most of them.">
+    <meta property="og:description" content="As student representatives for Computer Science and AI, we frequently receive questions about our studies. This FAQ should help answer most of them.">
+    <meta name="twitter:description" content="As student representatives for Computer Science and AI, we frequently receive questions about our studies. This FAQ should help answer most of them.">
+    
+    <meta property="og:image" content="/images/faqs_en.webp">
+    <meta property="og:image:url" content="/images/faqs_en.webp">
+    <meta name="twitter:image" content="/images/faqs_en.webp">
+    
+    <meta property="og:image:alt" content="White text on blue background: FAQ: CS & AI">
+    <meta name="twitter:image:alt" content="White text on blue background: FAQ: CS & AI">
+    
+    <meta property="og:image:width" content="1771">
+    <meta property="og:image:height" content="925">
+    
+    <meta name="twitter:card" content="summary_large_image">
   </head>
   <body vocab="http://schema.org/" typeof="FAQPage">
     <header>
