fix image links

--- a/templates/faq-de.html
+++ b/templates/faq-de.html
@@ -27,9 +27,9 @@
     <meta property="og:description" content="Als Studienvertretungen für Informatik und AI erhalten wir oft Fragen zu unseren Studien. Dieses FAQ soll dabei helfen, die meisten davon zu beantworten.">
     <meta name="twitter:description" content="Als Studienvertretungen für Informatik und AI erhalten wir oft Fragen zu unseren Studien. Dieses FAQ soll dabei helfen, die meisten davon zu beantworten.">
     
-    <meta property="og:image" content="/images/faqs_en.webp">
-    <meta property="og:image:url" content="/images/faqs_eb.webp">
-    <meta name="twitter:image" content="/images/faqs_en.webp">
+    <meta property="og:image" content="https://oeh-tnf.github.io/faq//images/faqs.webp">
+    <meta property="og:image:url" content="https://oeh-tnf.github.io/faq//images/faqs.webp">
+    <meta name="twitter:image" content="https://oeh-tnf.github.io/faq//images/faqs.webp">
     
     <meta property="og:image:alt" content="Weißer Text auf blauem Hintergrund: FAQ: Informatik & AI">
     <meta name="twitter:image:alt" content="Weißer Text auf blauem Hintergrund: FAQ: Informatik & AI">
