--- a/templates/faq-en.html
+++ b/templates/faq-en.html
@@ -27,9 +27,9 @@
     <meta property="og:description" content="As student representatives for Computer Science and AI, we frequently receive questions about our studies. This FAQ should help answer most of them.">
     <meta name="twitter:description" content="As student representatives for Computer Science and AI, we frequently receive questions about our studies. This FAQ should help answer most of them.">
     
-    <meta property="og:image" content="/images/faqs_en.webp">
-    <meta property="og:image:url" content="/images/faqs_en.webp">
-    <meta name="twitter:image" content="/images/faqs_en.webp">
+    <meta property="og:image" content="https://oeh-tnf.github.io/faq//images/faqs_en.webp">
+    <meta property="og:image:url" content="https://oeh-tnf.github.io/faq//images/faqs_en.webp">
+    <meta name="twitter:image" content="https://oeh-tnf.github.io/faq//images/faqs_en.webp">
     
     <meta property="og:image:alt" content="White text on blue background: FAQ: CS & AI">
     <meta name="twitter:image:alt" content="White text on blue background: FAQ: CS & AI">
