--- a/templates/faq-de.html
+++ b/templates/faq-de.html
@@ -19,20 +19,19 @@
     <script src="../../script.js" defer=""></script>
     
     <!-- Meta Information -->
-    <meta property="og:title" content="ÖH JKU – FAQ: Informatik & AI">
-    <meta name="twitter:title" content="ÖH JKU – FAQ: Informatik & AI">
+    <meta property="og:title" content="ÖH JKU – $faq.de.title$">
+    <meta name="twitter:title" content="ÖH JKU – $faq.de.title$">
     
-      
-    <meta name="description" content="Als Studienvertretungen für Informatik und AI erhalten wir oft Fragen zu unseren Studien. Dieses FAQ soll dabei helfen, die meisten davon zu beantworten.">
-    <meta property="og:description" content="Als Studienvertretungen für Informatik und AI erhalten wir oft Fragen zu unseren Studien. Dieses FAQ soll dabei helfen, die meisten davon zu beantworten.">
-    <meta name="twitter:description" content="Als Studienvertretungen für Informatik und AI erhalten wir oft Fragen zu unseren Studien. Dieses FAQ soll dabei helfen, die meisten davon zu beantworten.">
+    <meta name="description" content="$faq.de.description$">
+    <meta property="og:description" content="$faq.de.description$">
+    <meta name="twitter:description" content="$faq.de.description$">
     
-    <meta property="og:image" content="https://oeh-tnf.github.io/faq//images/faqs.webp">
-    <meta property="og:image:url" content="https://oeh-tnf.github.io/faq//images/faqs.webp">
-    <meta name="twitter:image" content="https://oeh-tnf.github.io/faq//images/faqs.webp">
+    <meta property="og:image" content="https://oeh-tnf.github.io/faq/images/$if(faq.de.banner)$$faq.de.banner$$else$faqs.webp$endif$">
+    <meta property="og:image:url" content="https://oeh-tnf.github.io/faq/images/$if(faq.de.banner)$$faq.de.banner$$else$faqs.webp$endif$">
+    <meta name="twitter:image" content="https://oeh-tnf.github.io/faq/images/$if(faq.de.banner)$$faq.de.banner$$else$faqs.webp$endif$">
     
-    <meta property="og:image:alt" content="Weißer Text auf blauem Hintergrund: FAQ: Informatik & AI">
-    <meta name="twitter:image:alt" content="Weißer Text auf blauem Hintergrund: FAQ: Informatik & AI">
+    <meta property="og:image:alt" content="White text on blue background: $faq.de.title$">
+    <meta name="twitter:image:alt" content="White text on blue background: $faq.de.title$">
     
     <meta property="og:image:width" content="1771">
     <meta property="og:image:height" content="925">
