--- a/templates/faq-en.html
+++ b/templates/faq-en.html
@@ -19,20 +19,19 @@
     <script src="../../script.js" defer=""></script>
     
     <!-- Meta Information -->
-    <meta property="og:title" content="ÖH JKU—FAQ: CS & AI">
-    <meta name="twitter:title" content="ÖH JKU—FAQ: CS & AI">
+    <meta property="og:title" content="ÖH JKU—$faq.en.title$">
+    <meta name="twitter:title" content="ÖH JKU—$faq.en.title$">
     
-      
-    <meta name="description" content="As student representatives for Computer Science and AI, we frequently receive questions about our studies. This FAQ should help answer most of them.">
-    <meta property="og:description" content="As student representatives for Computer Science and AI, we frequently receive questions about our studies. This FAQ should help answer most of them.">
-    <meta name="twitter:description" content="As student representatives for Computer Science and AI, we frequently receive questions about our studies. This FAQ should help answer most of them.">
+    <meta name="description" content="$faq.en.description$">
+    <meta property="og:description" content="$faq.en.description$">
+    <meta name="twitter:description" content="$faq.en.description$">
     
-    <meta property="og:image" content="https://oeh-tnf.github.io/faq//images/faqs_en.webp">
-    <meta property="og:image:url" content="https://oeh-tnf.github.io/faq//images/faqs_en.webp">
-    <meta name="twitter:image" content="https://oeh-tnf.github.io/faq//images/faqs_en.webp">
+    <meta property="og:image" content="https://oeh-tnf.github.io/faq/images/$if(faq.en.banner)$$faq.en.banner$$else$faqs_en.webp$endif$">
+    <meta property="og:image:url" content="https://oeh-tnf.github.io/faq/images/$if(faq.en.banner)$$faq.en.banner$$else$faqs_en.webp$endif$">
+    <meta name="twitter:image" content="https://oeh-tnf.github.io/faq/images/$if(faq.en.banner)$$faq.en.banner$$else$faqs_en.webp$endif$">
     
-    <meta property="og:image:alt" content="White text on blue background: FAQ: CS & AI">
-    <meta name="twitter:image:alt" content="White text on blue background: FAQ: CS & AI">
+    <meta property="og:image:alt" content="White text on blue background: $faq.en.title$">
+    <meta name="twitter:image:alt" content="White text on blue background: $faq.en.title$">
     
     <meta property="og:image:width" content="1771">
     <meta property="og:image:height" content="925">
